Fix resume layout problems on Chrome for Android Reduce the font stacks to just the preferred Windows font and an open source metric-equivalent font that can be downloaded from the web server, i.e. Calibri & Carlito, Book Antiqua & URW Palladio L. Ensures the layout is more predictable across platforms. This fixes lines breaking in inappropriate places when visiting the resume page in landscape mode on Chrome for Android. Increase right column of full size resume to a round 3.5in to redistribute the extra whitespace and give more leeway to differences in web renderers. Remove usage of .small class that was causing issues with "vertical-align: baseline" in Chrome for Android in landscape mode. Trim some bullet text to reduce number of lines when printing mobile resume layout on letter paper. Fix HTML validation errors by using the entity "&amp;" for and signs. Remove instances of 12pt text in resume. Only 9pt (date/location), 10pt (bullet text), 11pt (entry header), 13pt (section header), and 20pt (page header) are used for font-size. Make robustSplit() more robust in index page.

--- a/common.css
+++ b/common.css
@@ -23,6 +23,31 @@
 	font-style: italic;
 }
 
+@font-face {
+	font-family: 'URW Palladio L';
+	font-style: normal;
+	src: local('URW Palladio L'), url('URWPalladioL-Roma.ttf') format('truetype');
+}
+
+@font-face {
+	font-family: 'URW Palladio L';
+	src: url('URWPalladioL-Bold.ttf') format('truetype');
+	font-weight: bold;
+}
+
+@font-face {
+	font-family: 'URW Palladio L';
+	src: url('URWPalladioL-Ital.ttf') format('truetype');
+	font-style: italic;
+}
+
+@font-face {
+	font-family: 'URW Palladio L';
+	src: url('URWPalladioL-BoldItal.ttf') format('truetype');
+	font-weight: bold;
+	font-style: italic;
+}
+
 html,body {
 	margin: 0;
 	padding: 0;
@@ -41,7 +66,7 @@ body {
 
 .signature {
 	text-transform: uppercase;
-	font-family: 'Book Antiqua','Palatino Linotype','Palatino','URW Palladio L',serif;
+	font-family: 'Book Antiqua','URW Palladio L',serif;
 	font-weight: bold;
 	font-style: normal;
 }
