--- a/index.css
+++ b/index.css
@@ -22,7 +22,7 @@ body {
 
 .coverletter h1 {
 	text-transform: lowercase;
-	font-size: 32pt;
+	font-size: 28pt;
 	color: #aaa;
 	margin: 0;
 }
