--- a/resume.mobile.css
+++ b/resume.mobile.css
@@ -184,7 +184,7 @@
 
 	.entryless h2 {
 		display: inline-block;
-		font-size: 12pt;
+		font-size: 11pt;
 		line-height: 13pt;
 	}
 
